header done for desktop

--- a/index.html
+++ b/index.html
@@ -12,10 +12,54 @@
     <title>Vidyesh | Blog</title>
   </head>
   <body>
-    <i class="fa fa-android"></i>
-    <img
-      src="https://www.gstatic.com/devrel-devsite/prod/veaa02889f0c07424beaa31d9bac1e874b6464e7ed7987fde4c94a59ace9487fa/android/images/lockup.svg"
-      alt="developer image"
-    />
+    <nav>
+      <div class="contain100 grid">
+        <div class="logo flex">
+          <img
+            src="https://www.gstatic.com/devrel-devsite/prod/veaa02889f0c07424beaa31d9bac1e874b6464e7ed7987fde4c94a59ace9487fa/android/images/lockup.svg"
+            alt="developer image"
+          />
+        </div>
+        <div class="nav-links">
+          <ul class="flex">
+            <li class="nav-links_itmes">Platform</li>
+            <li class="nav-links_itmes">Android Studio</li>
+            <li class="nav-links_itmes">Google Play</li>
+            <li class="nav-links_itmes">JetPack</li>
+            <li class="nav-links_itmes">Koltin</li>
+            <li class="nav-links_itmes">Docs</li>
+            <li class="nav-links_itmes">News</li>
+          </ul>
+        </div>
+        <div class="search flex">
+          <div class="inputIcon">
+            <input type="text" placeholder="search" />
+            <i class="fas fa-search"></i>
+          </div>
+          <div class="language">
+            English
+            <i class="fas fa-sort-down"></i>
+          </div>
+          <div>
+            <a href="#">SIGN IN</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <section class="header-title">
+      <h2>
+        <a href="#">JetPack</a>
+      </h2>
+      <div class="tab-bar">
+        <ul class="flex">
+          <li class="tab-items">OVERVIEW</li>
+          <li class="tab-items">GET STARTED</li>
+          <li class="tab-items">lIBRARIES</li>
+          <li class="tab-items">COMMUNITY</li>
+          <li class="tab-items">COMPOSE</li>
+        </ul>
+      </div>
+    </section>
+    <section style="height: 1000px"></section>
   </body>
 </html>
