--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       </h2>
       <div class="tab-bar">
         <ul class="flex">
-          <li class="tab-items">OVERVIEW</li>
-          <li class="tab-items">GET STARTED</li>
-          <li class="tab-items">lIBRARIES</li>
-          <li class="tab-items">COMMUNITY</li>
-          <li class="tab-items">COMPOSE</li>
+          <li class="tab-items"><a href="#">OVERVIEW</a></li>
+          <li class="tab-items"><a href="#">GET STARTED</a></li>
+          <li class="tab-items"><a href="#">lIBRARIES</a></li>
+          <li class="tab-items"><a href="#">COMMUNITY</a></li>
+          <li class="tab-items"><a href="#">COMPOSE</a></li>
         </ul>
       </div>
     </section>
